<resources>
    <string name="app_name">Tic Tac Toe Classic</string>
    <string name="player_x">Player Knight</string>
    <string name="player_o">Player Queen</string>
    <string name="turn_indicator_static">Turn</string>
    <string name="score_format">Knight: %1$d  •  Queen: %2$d</string>
    <string name="reset">Reset</string>
    <string name="new_round">New Round</string>
    <string name="x_wins">Knight wins!</string>
    <string name="o_wins">Queen wins!</string>
    <string name="tie_game">It&#8217;s a tie!</string>
    <string name="grid_cell">Grid cell %1$d</string>
</resources>
